--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
     <header>
       <div class="header-logo">
-        <img src="/head-logo.png" alt="This is the header logo." />
+        <img src="head-logo.png" alt="This is the header logo." />
       </div>
       <ul class="header-list">
         <a href="" style="color: #e81c2e">home</a>
@@ -40,7 +40,7 @@
     </header>
     <section class="slider">
       <div class="slider-img">
-        <!-- <img src="/Main.jpg" alt=""> -->
+        <img src="Main.jpg" alt="">
         <div class="slider-overlay">
           <div class="arrow slider-left">
             <i class="fa-solid fa-chevron-left"></i>
@@ -102,7 +102,7 @@
           <button>Read More</button>
         </div>
         <div class="article-img">
-          <img src="/malibu.png" alt="" />
+          <img src="malibu.png" alt="" />
         </div>
       </div>
     </article>
@@ -112,7 +112,7 @@
       <div class="cars-boxes">
         <div class="box1 car-box">
           <div class="car-img">
-            <img src="/Main.jpg" alt="" width="350px" height="138px" />
+            <img src="Main.jpg" alt="" width="350px" height="138px" />
           </div>
           <div class="row">
             <a href="">Full Size 39.99 per day</a>
@@ -120,7 +120,7 @@
         </div>
         <div class="box2 car-box">
           <div class="car-img">
-            <img src="/malibu.png" alt="" width="350px" height="177px" />
+            <img src="malibu.png" alt="" width="350px" height="177px" />
           </div>
           <div class="row">
             <a href="">Mid Size 34.99 per day</a>
@@ -128,7 +128,7 @@
         </div>
         <div class="box3 car-box">
           <div class="car-img">
-            <img src="/chevrolet-1.jpg" alt="" width="350px" height="138px" />
+            <img src="chevrolet-1.jpg" alt="" width="350px" height="138px" />
           </div>
           <div class="row">
             <a href="">Small Cars 24.99 per day</a>
